# phobos_sw

./: .gitignore  Cargo.toml  clearsessions  dependabot.yml  readme.md  synctopi
.github/: dependabot.yml
.github/workflows/: rust.yml
cam_exec/: Cargo.toml
cam_exec/gstreamer_scripts/: rtspsink  udpmulticastsink  udpmulticastsrc  udpsink  udpsrc
cam_exec/src/: cam_server.rs  main.rs  params.rs  stream.rs
command_line_rover/: Cargo.toml  README.md
command_line_rover/data/: history.txt
command_line_rover/src/: main.rs
comms_if/: Cargo.toml
comms_if/src/: eqpt.rs  lib.rs
comms_if/src/eqpt/: cam.rs  mech.rs  mod.rs  perloc.rs
comms_if/src/net/: mod.rs
comms_if/src/tc/: arm_ctrl.rs  auto.rs  loco_ctrl.rs  mod.rs
gnd_exec/: Cargo.toml
mech_exec/: Cargo.toml  mech_exec.py  mechanisms_execute.py
mech_exec/src/: main.rs  mech_server.rs  params.rs
mech_exec/src/servo_ctrl/: mod.rs  pca9685.rs
params/: arm_ctrl.toml  auto_mgr.toml  cam_exec.toml  cost_map.toml  elec_driver.toml  loco_ctrl.toml  mech_exec.toml  net.toml  path_planner.toml  per_mgr.toml  rov_exec.toml  traj_ctrl.toml  trav_mgr.toml
rov_exec/: Cargo.toml
rov_exec/benches/: bench_cost_map.rs
rov_exec/src/: cam_client.rs  data_store.rs  lib.rs  main.rs  mech_client.rs  params.rs  perloc_client.rs  sim_client.rs  tc_client.rs  tc_processor.rs  tm_server.rs
rov_exec/src/arm_ctrl/: arm_config.rs  inverse_kinematics.rs  mod.rs  params.rs  state.rs
rov_exec/src/auto/: mod.rs  mode_check.rs  mode_mnvr.rs  params.rs  path.rs  per.rs
rov_exec/src/auto/auto_mgr/: auto_mnvr.rs  check.rs  follow.rs  img_stop.rs  kickstart.rs  mod.rs  off.rs  params.rs  pause.rs  stop.rs  tm.rs  wait_new_pose.rs
rov_exec/src/auto/loc/: mod.rs  params.rs
rov_exec/src/auto/map/: cost_map.rs  grid_map.rs  mod.rs  terrain_map.rs
rov_exec/src/auto/nav/: check_nav_ctrl.rs  mod.rs  path_planner.rs
rov_exec/src/auto/nav/trav_mgr/: escape_boundary.rs  local_target.rs  mod.rs  params.rs  path_types.rs  worker.rs
rov_exec/src/auto/traj_ctrl/: controllers.rs  mod.rs  params.rs  state.rs
rov_exec/src/elec_driver/: mod.rs  params.rs  state.rs
rov_exec/src/loc/: mod.rs
rov_exec/src/loco_ctrl/: calc_ackerman.rs  calc_point_turn.rs  calc_skid_steer.rs  cmd.rs  loco_config.rs  mod.rs  params.rs  state.rs
rov_exec/src/mech_client/: mod.rs
rov_exec/src/traj_ctrl/: controllers.rs  mod.rs  path.rs  state.rs
scripts/: arm_demo_01.prs  arm_demo_02.prs  arm_demo_02_.prs  arm_demo_03.prs  arm_demo_04.prs  arm_demo_05.prs  auto_test_1.prs  auto_test_2.prs  calibration_test_01.prs  demo_01.prs  demo_02.prs  invalid_01.prs  invalid_02.prs  invalid_03.prs  invalid_04.prs  invalid_05.prs  loco_ctrl_test_01.prs  loco_ctrl_test_02.prs  loco_ctrl_test_03.prs  loco_ctrl_test_04.prs  loco_ctrl_test_05.prs  loco_ctrl_test_06.prs  loco_ctrl_test_07.prs
tools/: cell_map.py  live_auto_tm.py  live_cost_map_view.py  plot_cell_map.py  plot_depth_img.py  plot_grid_map.py  plot_grid_map_plotly.py  plot_path.py  plot_point_cloud.py  plot_quadtree.py  plotly_3d_bar.py
util/: Cargo.toml
util/src/: archive.rs  convert.rs  host.rs  lib.rs  logger.rs  maths.rs  module.rs  params.rs  quadtree.rs  script_interpreter.rs  session.rs  time.rs
util/src/archive/: mod.rs  ser.rs
