[package]
name = "command_line_rover"
version = "0.1.0"
authors = ["Richard A <37155328+UY-Scuti-Real@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rustyline = "6.2.0"
