[package]
name = "mech_exec"
version = "0.1.0"
authors = ["Duncan R Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.5"
thiserror = "1.0"
pwm-pca9685 = "0.3.0"
embedded-hal = "0.2"

# Internal
comms_if = { path = "../comms_if" }
util = { path = "../util" }

# Raspberry Pi 2/3/4 Targets only
[target.'armv7-unknown-linux-gnueabihf'.dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
