[package]
name = "rov_exec"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

[lib]
name = "rov_lib"
path = "src/lib.rs"

[[bin]]
name = "rov_exec"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.5"
thiserror = "1.0"
pyo3 = "0.13.1" # For electronics driver
image = "0.23"
chrono = "0.4"

# Internal
util = { path = "../util" }
comms_if = { path = "../comms_if" }

[features]
# Default feature enables all network stacks
default = ["mech", "cam", "imu", "sim"]

# Mechanisms network stack
mech = []

# Camera network stack
cam = []

# IMU network stack
imu = []

# Simulation network stack (note this is not required for using simulated mech,
# cam, or imu stacks, only for additional sim data falling under sim_client)
sim = []