[package]
name = "util"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# uname = "0.1.1"
log = "0.4.8"
fern = "0.6"
conquer-once = "0.3"
chrono = "0.4"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
num-traits = "0.2"
csv = "1.1.3"
regex = "1"
eyre = "0.4"
color-eyre = "0.5"
thiserror = "1.0"

comms_if = { path = "../comms_if" }